# Auto_Input

./: CLAUDE_MAP.md  README.md  hook_log.txt  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  constants.ts  index.css  main.tsx  overlay-main.tsx  overlay.css
src-tauri/: Cargo.toml  build.rs  manifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  storage.rs  tray.rs
src-tauri/src/engine/: constants.rs  hook.rs  keycodes.rs  mod.rs  overlay.rs  player.rs  recorder.rs  schema.rs  shortcut.rs  state.rs
src/components/: ActionRow.tsx  ActionsList.tsx  AddActionModal.tsx  AddManualActionModal.tsx  ConflictWarningModal.tsx  HotkeyField.tsx  InspectLoadoutModal.tsx  LoadoutTab.tsx  LoopControl.tsx  OverlayView.tsx  PositiveIntegerInput.tsx  PrimaryActionButton.tsx  RecordButton.tsx  SaveLoadoutModal.tsx  SettingsTab.tsx  SideRail.tsx
src/constants/: keyList.ts
src/hooks/: useKeyCapture.ts  useSequence.ts  useTheme.ts
src/styles/: tokens.css
src/types/: sequence.ts
